# pa-i-pikestudios

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  Readme.md  annotated.html  annotated_dup.js  applayer_8h_source.html  application_8h_source.html  balancing_settings.cfg  build.cmd  build.ps1  build.sh  cannon_8h_source.html  chonkyshark_8h_source.html  classAppLayer-members.html  classAppLayer.html  classAppLayerPriv-members.html  classAppLayerPriv.html  classBody-members.html  classBody.html  classCannon-members.html  classCannon.html  classChonkyShark-members.html  classChonkyShark.html  classContributorsLayer-members.html  classContributorsLayer.html  classDeathScreenLayer-members.html  classDeathScreenLayer.html  classDebugLayer-members.html  classDebugLayer.html  classExplosiveBarrel-members.html  classExplosiveBarrel.html  classFilemanager-members.html  classFilemanager.html  classFin-members.html  classFin.html  classFortunaDirector-members.html  classFortunaDirector.html  classFortunaDirector.js  (+232 more)
.github/workflows/: main.yml
cmake/: Config.cmake  Dependencies.cmake  Extra.iss  Package.cmake
doc/: Doxyfile
resources/shader/: drop_shadow.fs  emissive_sprite_flash.fs  normal_map_lighting.fs  wave.fs
ressources/shader/: wave.fs
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_10.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  concepts_0.js  enums_0.js  enums_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  (+16 more)
src/: CMakeLists.txt  main.cpp
src/app/: CMakeLists.txt  applayer.cpp  applayer.h  debuglayer.cpp  debuglayer.h  main.cpp  pauselayer.cpp  pauselayer.h  player.cpp  player.h  winglviewporthooks.cpp  winglviewporthooks.h
src/app/entities/: Tentacle.cpp  Tentacle.h  cannon.cpp  cannon.h  chonkyshark.cpp  chonkyshark.h  director.cpp  director.h  explosivebarrel.cpp  explosivebarrel.h  gemstone.cpp  gemstone.h  hunter.cpp  hunter.h  lootchest.cpp  lootchest.h  player.cpp  player.h  projectile.cpp  projectile.h  shark.cpp  shark.h  tentacle.cpp  tentacle.h
src/app/layers/: applayer.cpp  applayer.h  contributorslayer.cpp  contributorslayer.h  deathscreenlayer.cpp  deathscreenlayer.h  debuglayer.cpp  debuglayer.h  mainmenulayer.cpp  mainmenulayer.h  optionslayer.cpp  optionslayer.h  pauselayer.cpp  pauselayer.h  scorelayer.cpp  scorelayer.h  ui.cpp  ui.h  uilayer.cpp  uilayer.h  upgradelayer.cpp  upgradelayer.h
src/app/misc/: leaderboardclient.cpp  leaderboardclient.h  loottable.cpp  loottable.h  mapborderinteraction.cpp  mapborderinteraction.h  smear.cpp  smear.h  winglviewporthooks.cpp  winglviewporthooks.h
src/c_math_extension/: CMakeLists.txt  coodinatesystem.cpp  coordinatesystem.cpp  utilities.cpp
src/c_math_extension/include/: coordinatesystem.h  utilities.h
src/core/: CMakeLists.txt  application.cpp  collision.cpp  events.cpp  filemanager.cpp  layer.cpp  movable.cpp  setting.cpp  spawner.cpp  sprite.cpp  time.cpp  utils.cpp  viewport.cpp
src/core/include/PSCore/: application.h  utils.h
src/core/include/pscore/: application.h  collision.h  filemanager.h  illumination.h  renderer.h  settings.h  shadow.h  spawner.h  sprite.h  time.h  utils.h  viewport.h
src/core/include/psinterfaces/: entity.h  events.h  layer.h  mediator.h  movable.h  renderable.h
src/dep/: CMakeLists.txt  raygui.h
